--- a/style.css
+++ b/style.css
@@ -2,4 +2,35 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center
+}
+
+h1 {
+  text-align: center;
+}
+
+nav, figcaption {
+  text-align: center;
+}
+
+nav {
+  background-color: lightGrey;
+  padding: 20px 0;
+  border-style: inset;
+}
+nav a {
+  text-align: center;
+  padding: 0 10px;
+}
+
+#featured-property  p {
+  width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+#details div {
+  float: left;
+  width: 25%;
+  text-align: center;
 }
